// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots actionBar locked visible 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
        </div>
      </div>
      <div
        data-css-okadky=""
      >
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots actionBar long title 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
        </div>
      </div>
      <div
        data-css-elqoo0=""
      >
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots actionBar long title with image 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Amazingly, the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
        </div>
      </div>
      <div
        data-css-elqoo0=""
      >
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots actionBar one action 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Ready, Action, Bar!
        </div>
      </div>
      <div
        data-css-elqoo0=""
      >
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots combo everything 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1dgg89l=""
      >
        <div
          data-css-1vvatyd=""
        >
          <span
            data-css-1le2bq0=""
          >
            <a
              href="http://google.com?query=title"
            >
              Image, Progress, Link Full Overlay, Icon, Link Title, Link Meta1, 2, Action Bar, and More Really. Why Not Put More In? Release a New Edition Every Year With All the Excesses of our VC Budget? Boundless Features Will Be Yours 2000
            </a>
          </span>
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            <span
              data-css-1le2bq0=""
            >
              <a
                href="http://google.com/?query=jaketrent"
              >
                It is impossible to count the grand contributions of this great author
              </a>
            </span>
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            <span
              data-css-1le2bq0=""
            >
              <a
                href="http://google.com/?query=jaketrent"
              >
                Levels heretofore unknown in the battle for truth and knowledge
              </a>
            </span>
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            <span
              data-css-1le2bq0=""
            >
              <a
                href="http://google.com/?query=jaketrent"
              >
                A length of such amazing lengthitude so-as to blow the mind
              </a>
            </span>
          </span>
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Goodness me!
          </span>
        </div>
      </div>
      <div
        data-css-1akhza9=""
      >
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="bookmark icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.501 2H9C6.794 2 5 3.795 5 6v17l5.5-6 5.5 6V10h4a1 1 0 001-1V6c0-2.205-1.292-4-3.499-4zM14 6v12l-3.5-4L7 18V6c0-1.104.897-2 2-2h5.536A3.99 3.99 0 0014 6zm5 2h-3V6c0-1.104.398-2 1.501-2C18.603 4 19 4.896 19 6v2z"
              />
            </svg>
          </div>
        </button>
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="gear icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M13 6.083V4h-2v2.083a5.994 5.994 0 00-3.623 2.092L5.573 7.133l-1 1.732 1.803 1.04A5.985 5.985 0 006 12c0 .736.133 1.441.375 2.092l-1.803 1.041 1 1.732 1.804-1.041A5.993 5.993 0 0011 17.917V20h2v-2.083a5.994 5.994 0 003.625-2.094l1.805 1.042 1-1.732-1.805-1.042A5.987 5.987 0 0018 12c0-.736-.133-1.442-.375-2.093l1.804-1.042-1-1.732-1.806 1.043A5.994 5.994 0 0013 6.083zm-8.924 7.028a8.06 8.06 0 010-2.222L1.842 9.598l3-5.196 2.236 1.291a7.988 7.988 0 011.924-1.112V2h6v2.582c.695.281 1.34.657 1.922 1.112l2.238-1.292 3 5.196-2.237 1.292a8.063 8.063 0 010 2.22l2.237 1.292-3 5.196-2.238-1.292a7.984 7.984 0 01-1.922 1.112V22h-6v-2.581a7.996 7.996 0 01-1.923-1.112L4.84 19.598l-3-5.196 2.236-1.291zM12 16a4 4 0 110-8 4 4 0 010 8zm0-2a2 2 0 100-4 2 2 0 000 4z"
              />
            </svg>
          </div>
        </button>
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="more icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots fullOverlay element 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Overlay This!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots fullOverlay link 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Overlay This!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots fullOverlay linked icon 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Overlay This!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots fullOverlay linked icon with image link 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Both Icon and Image Have Separate Click Targets
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image link 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Linked Image
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image no image 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          No Image
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image no image with overlay 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          No Image, With Overlay (Not Shown)
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image small image 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Small Image
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image tall image 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Tall Image
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image wide image 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Wide Image
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image with image 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          With Image
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots image with image with overlay 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          With Image
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots in a stack no top border on first row 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Course thing you do
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            1m 46s
          </span>
        </div>
      </div>
      <div
        data-css-okadky=""
      >
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="more icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Course thing you do
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            1m 46s
          </span>
        </div>
      </div>
      <div
        data-css-okadky=""
      >
        <button
          data-css-2qvjr2=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="more icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots in drawer medium 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-1fq8nx6=""
    >
      <div
        data-css-1oot5vc=""
        onClick={[Function]}
      >
        <div
          data-css-euzj8=""
        >
          <div
            data-css-vl7fes=""
          >
            <div
              data-css-js3ti3=""
            >
              <div
                data-css-6x74ml=""
              />
            </div>
            <div
              data-css-kxulf3=""
            >
              <div
                data-css-1jlgfae=""
              >
                Course thing you do
              </div>
              <div
                data-css-cnfu1f=""
              >
                <span
                  data-css-1kcrbi9=""
                >
                  1m 46s
                </span>
              </div>
            </div>
            <div
              data-css-okadky=""
            >
              <button
                data-css-2qvjr2=""
                onClick={[Function]}
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="more icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          data-css-qs2rg7=""
        >
          <button
            aria-label="Expand"
            data-css-7jbmom=""
            onClick={[Function]}
          >
            <div
              data-css-1byjzqg=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-1i2htk9=""
      >
        <div
          aria-hidden={true}
          data-css-1j3g0qd=""
        >
          <div>
            some goodies in the drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots in drawer small 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-1fq8nx6=""
    >
      <div
        data-css-1oot5vc=""
        onClick={[Function]}
      >
        <div
          data-css-euzj8=""
        >
          <div
            data-css-vl7fes=""
          >
            <div
              data-css-1tiyrld=""
            >
              <div
                data-css-1vvatyd=""
              >
                Course thing you do
              </div>
              <div
                data-css-5jxdga=""
              >
                <span
                  data-css-1kcrbi9=""
                >
                  1m 46s
                </span>
              </div>
            </div>
            <div
              data-css-okadky=""
            >
              <button
                data-css-2qvjr2=""
                onClick={[Function]}
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="more icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 14.5a2 2 0 110-4 2 2 0 010 4zm12 0a2 2 0 110-4 2 2 0 010 4zm-6 0a2 2 0 110-4 2 2 0 010 4z"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          data-css-qs2rg7=""
        >
          <button
            aria-label="Expand"
            data-css-7jbmom=""
            onClick={[Function]}
          >
            <div
              data-css-1byjzqg=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        data-css-1i2htk9=""
      >
        <div
          aria-hidden={true}
          data-css-1j3g0qd=""
        >
          <div>
            some goodies in the drawer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata link 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Meta With Links
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            <span
              data-css-1le2bq0=""
            >
              <a
                href="http://google.com/?query=jaketrent"
              >
                Jake Trent
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata long links 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Meta With Links
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            <span
              data-css-1le2bq0=""
            >
              <a
                href="http://google.com/?query=jaketrent"
              >
                It is impossible to count the grand contributions of this great author
              </a>
            </span>
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            <span
              data-css-1le2bq0=""
            >
              <a
                href="http://google.com/?query=jaketrent"
              >
                Levels heretofore unknown in the battle for truth and knowledge
              </a>
            </span>
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            <span
              data-css-1le2bq0=""
            >
              <a
                href="http://google.com/?query=jaketrent"
              >
                A length of such amazing lengthitude so-as to blow the mind
              </a>
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata long strings 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          The Longest Strings in El Mundo
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            It is impossible to count the grand contributions of this great author
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            Levels heretofore unknown in the battle for truth and knowledge
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            A length of such amazing lengthitude so-as to blow the mind
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata long strings with image 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Long Strings AND Los Imagereo
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            It is impossible to count the grand contributions of this great author
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            Levels heretofore unknown in the battle for truth and knowledge
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            A length of such amazing lengthitude so-as to blow the mind
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata string 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Meta with Strings
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jake Trent
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata super long first string 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Long Strings AND Los Imagereo
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            This string is so long, it should be illegal.This string is so long, it should be illegal.This string is so long, it should be illegal.   This string is so long, it should be illegal. 
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            This is still visible
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            And so is this
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots metadata two lines 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          Meta With Links
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jake Trent
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            School of the Internet
          </span>
          <span
            aria-hidden={true}
            data-css-kykfz1=""
          >
            ·
          </span>
          <span
            data-css-1kcrbi9=""
          >
            Blasted Good
          </span>
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Certified GMO-free
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress 0 progress 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-js3ti3=""
      >
        <div
          data-css-6x74ml=""
        />
      </div>
      <div
        data-css-kxulf3=""
      >
        <div
          data-css-1jlgfae=""
        >
          0 progress
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress 66.6667 progress 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-js3ti3=""
      >
        <div
          data-css-6x74ml=""
        />
        <div
          data-css-268zju=""
        >
          <div
            aria-label="67% complete"
            data-css-h2kagm=""
          />
        </div>
      </div>
      <div
        data-css-kxulf3=""
      >
        <div
          data-css-1jlgfae=""
        >
          66.6667 progress
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress 100 progress 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-js3ti3=""
      >
        <div
          data-css-6x74ml=""
        />
        <div
          data-css-268zju=""
        >
          <div
            aria-label="100% complete"
            data-css-1qb9ko2=""
          />
        </div>
      </div>
      <div
        data-css-kxulf3=""
      >
        <div
          data-css-1jlgfae=""
        >
          100 progress
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots progress no image 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1jlgfae=""
        >
          No image, with progress (not shown)
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots size medium 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-js3ti3=""
      >
        <div
          data-css-6x74ml=""
        />
      </div>
      <div
        data-css-kxulf3=""
      >
        <div
          data-css-1jlgfae=""
        >
          medium Row
        </div>
        <div
          data-css-cnfu1f=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots size small 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          small Row
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title link 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          <span
            data-css-1le2bq0=""
          >
            <a
              href="http://google.com"
            >
              A Link Title
            </a>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title link truncated 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      style={
        Object {
          "maxWidth": 400,
        }
      }
    >
      <div
        data-css-vl7fes=""
      >
        <div
          data-css-1tiyrld=""
        >
          <div
            data-css-1vvatyd=""
          >
            <span
              data-css-1le2bq0=""
            >
              <a
                href="http://google.com"
              >
                <div>
                  We'll have a super time. You can create the world you want to see and be a part of. You have that power. These things happen automatically. All you have to do is just let them happen. Only think about one thing at a time. Don't get greedy.
                </div>
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title medium long title 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-js3ti3=""
      >
        <div
          data-css-6x74ml=""
        />
      </div>
      <div
        data-css-kxulf3=""
      >
        <div
          data-css-1jlgfae=""
        >
          medium With the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
        </div>
        <div
          data-css-cnfu1f=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title small long title 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          small With the Longest Title in the World Because It's Known That If You Give Room For This Kind of a Title, It Will Definitely Come to Pass 2000
        </div>
        <div
          data-css-5jxdga=""
        >
          <span
            data-css-1kcrbi9=""
          >
            Jim Cooper
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title string 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      data-css-vl7fes=""
    >
      <div
        data-css-1tiyrld=""
      >
        <div
          data-css-1vvatyd=""
        >
          A String Title
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots title string truncated 1`] = `
<div
  data-css-1so76ss=""
>
  <div
    style={
      Object {
        "margin": "24px auto",
        "maxWidth": "calc(100vw - 64px)",
      }
    }
  >
    <div
      style={
        Object {
          "maxWidth": 400,
        }
      }
    >
      <div
        data-css-vl7fes=""
      >
        <div
          data-css-1tiyrld=""
        >
          <div
            data-css-1vvatyd=""
          >
            <div>
              We'll have a super time. You can create the world you want to see and be a part of. You have that power. These things happen automatically. All you have to do is just let them happen. Only think about one thing at a time. Don't get greedy.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
